tests/references/ill-typed/ambiguous-reference-type-1.stella
language core;

extend with #references, #let-bindings;

fn main(n : Nat) -> Nat {
  return let ref = <0xABCDEF> in *ref
}